# kontrocode

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/workflows/: bugbot.yml  ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs  tools.rs  tray.rs
apps/desktop/src/components/: AgentPanel.tsx  Chat.tsx  Editor.tsx  FileTree.tsx  MemoryPanel.tsx  ResearchFeed.tsx  StatusBar.tsx  Terminal.tsx  TitleBar.tsx
apps/desktop/src/lib/: api.ts  store.ts
apps/desktop/src/styles/: base.css  monaco-theme.css  tokens.css
config/: mcp_servers.json  templates.json
crates/kontrocode-agent/: Cargo.toml
crates/kontrocode-agent/src/: acp.rs  bugbot.rs  capabilities.rs  codegen.rs  completion.rs  decide.rs  diff.rs  hooks.rs  lib.rs  loop_.rs  main.rs  mcp_runtime.rs  mission_control.rs  multi_agent.rs  platform.rs  prompt.rs  rules.rs  stream.rs  tools.rs
crates/kontrocode-core/: Cargo.toml
crates/kontrocode-core/src/: config.rs  embedding.rs  error.rs  intent.rs  lib.rs  message.rs  profile.rs  provider.rs  research.rs
crates/kontrocode-core/src/config/: mcp.rs  mod.rs
crates/kontrocode-memory/: Cargo.toml
crates/kontrocode-memory/src/: collector.rs  decay.rs  enhanced.rs  file_store.rs  lib.rs  redis_store.rs  signal.rs  store.rs
crates/kontrocode-research/: Cargo.toml
crates/kontrocode-research/src/: cache.rs  feed.rs  lib.rs  runner.rs  version_resolver.rs
crates/kontrocode-research/src/cache/: mod.rs  redis.rs
crates/kontrocode-research/src/sources/: docs.rs  mod.rs  null.rs  real.rs
crates/kontrocode-router/: Cargo.toml
crates/kontrocode-router/src/: auto_connect.rs  embedding.rs  lib.rs  mock.rs  monitor.rs  provider.rs  registry.rs  router.rs  scorer.rs
crates/kontrocode-router/src/providers/: generic.rs
docs/: ARCHITECTURE.md  ROADMAP.md  design.md
extensions/jetbrains/: build.gradle.kts
extensions/vscode/: package.json  tsconfig.json
extensions/vscode/src/: extension.ts
packaging/: install.sh
packaging/deb/DEBIAN/: control
scripts/: check-tokens.mjs
zed/assets/themes/kontrocode/: kontrocode.json
zed/crates/paths/src/: paths.rs
zed/crates/theme/src/: theme.rs
zed/crates/zed/: Cargo.toml
