[workspace]
resolver = "2"
members = [
    "crates/kontrocode-core",
    "crates/kontrocode-agent",
    "crates/kontrocode-router",
    "crates/kontrocode-research",
    "crates/kontrocode-memory",
]

# Zed is a separately-versioned subproject with its own Cargo workspace.
# Build it via:  cd zed && cargo build
# The two workspaces are intentionally NOT merged: Zed ships as a
# contiguous fork and our crates are versioned independently.

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/fahimuntasin/kontrocode"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
tempfile = "3.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Internal
kontrocode-core = { path = "crates/kontrocode-core" }
kontrocode-agent = { path = "crates/kontrocode-agent" }
kontrocode-router = { path = "crates/kontrocode-router" }
kontrocode-research = { path = "crates/kontrocode-research" }
kontrocode-memory = { path = "crates/kontrocode-memory" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
