[package]
name = "kontrocode-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenCode-style agent loop for KontroCode."

[dependencies]
kontrocode-core.workspace = true
kontrocode-router.workspace = true
kontrocode-research.workspace = true
kontrocode-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
