[package]
name = "kontrocode-research"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Research agent: parallel docs, package registry, and community signal fetchers."

[dependencies]
kontrocode-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
